--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.7",
         "pestphp/pest-plugin-drift": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.1"
+        "pestphp/pest-plugin-faker": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "pestphp/pest-plugin-livewire": "^3.0",
+        "pestphp/pest-plugin-type-coverage": "^3.3"
     },
     "autoload": {
         "psr-4": {
@@ -57,6 +60,19 @@
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
+        ],
+        "lint": [
+            "pint"
+        ],
+        "test:lint": [
+            "pint --test"
+        ],
+        "test:type-coverage": "pest --type-coverage --min=100",
+        "test:unit": "pest --parallel --ci --colors=always --coverage --min=100",
+        "test": [
+            "@composer test:lint",
+            "@composer test:type-coverage",
+            "@composer test:unit"
         ]
     },
     "extra": {
