--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.41",
@@ -67,10 +68,14 @@
         "test:lint": [
             "pint --test"
         ],
+        "test:types": [
+            "phpstan analyse --memory-limit=2G --error-format=table --ansi"
+        ],
         "test:type-coverage": "pest --type-coverage --min=100",
         "test:unit": "pest --parallel --ci --colors=always --coverage --min=100",
         "test": [
             "@composer test:lint",
+            "@composer test:types",
             "@composer test:type-coverage",
             "@composer test:unit"
         ]
