chore: rector php

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "livewire/volt": "^1.6.7"
     },
     "require-dev": {
+        "driftingly/rector-laravel": "^2.0",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^3.0",
         "laravel/pail": "^1.2.2",
@@ -62,6 +63,12 @@
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
         ],
+        "refactor": [
+            "rector"
+        ],
+        "test:refactor": [
+            "rector --dry-run --ansi"
+        ],
         "lint": [
             "pint"
         ],
@@ -75,6 +82,7 @@
         "test:unit": "pest --parallel --ci --colors=always --coverage --min=100",
         "test": [
             "@composer test:lint",
+            "@composer test:refactor",
             "@composer test:types",
             "@composer test:type-coverage",
             "@composer test:unit"
