--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,54 +1,76 @@
-name: tests
+name: Tests
 
 on:
   push:
     branches:
-      - develop
-      - main
-  pull_request:
-    branches:
-      - develop
       - main
 
 jobs:
   ci:
     runs-on: ubuntu-latest
-    environment: Testing
+    strategy:
+      fail-fast: true
+      matrix:
+        php: [8.4]
+
+    name: Tests
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Cache Dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.composer/cache/files
+          key: dependencies-php-composer-v2-${{ hashFiles('composer.lock') }}
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.4
+          php-version: ${{ matrix.php }}
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
           tools: composer:v2
           coverage: xdebug
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Set up Node & NPM
+        uses: actions/setup-node@v2
         with:
-          node-version: '22'
-          cache: 'npm'
+          node-version: '22.x'
 
-      - name: Install Node Dependencies
-        run: npm i
+      - name: Setup Problem Matches
+        run: |
+          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
-      - name: Create SQLite Database
-        run: touch database/database.sqlite
+      - name: Install PHP dependencies
+        run: composer install --no-interaction --no-progress --ansi
 
-      - name: Install Dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+      - name: Get NPM cache directory
+        id: npm-cache-dir
+        shell: bash
+        run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
 
-      - name: Copy Environment File
-        run: cp .env.example .env
+      - name: Cache dependencies
+        id: npm-cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      - name: Generate Application Key
-        run: php artisan key:generate
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm install
 
-      - name: Build Assets
+      - name: Build dependencies
         run: npm run build
 
-      - name: Run Tests
-        run: ./vendor/bin/phpunit
+      - name: Prepare Laravel
+        run: |
+          cp .env.example .env
+          php artisan key:generate
+
+      - name: Tests
+        run: composer test
