--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.30",
+        "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.0",
         "livewire/volt": "^1.6.7"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "driftingly/rector-laravel": "^2.0",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^3.0",
